<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="8dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="TCP Configuration"
			android:textStyle="bold"
			android:textSize="16sp"
			android:paddingTop="8dp"
			android:paddingBottom="4dp"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_addr"/>
		<EditText
			android:id="@+id/socks_addr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="text"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_port"/>
		<EditText
			android:id="@+id/socks_port"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="number"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_user"/>
		<EditText
			android:id="@+id/socks_user"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="text"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_pass"/>
		<EditText
			android:id="@+id/socks_pass"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="textPassword"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="UDP Configuration"
			android:textStyle="bold"
			android:textSize="16sp"
			android:paddingTop="16dp"
			android:paddingBottom="4dp"/>
		<CheckBox
			android:id="@+id/udp_in_tcp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/udp_in_tcp"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_udp_addr"/>
		<EditText
			android:id="@+id/socks_udp_addr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="text"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_udp_port"/>
		<EditText
			android:id="@+id/socks_udp_port"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="number"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_udp_user"/>
		<EditText
			android:id="@+id/socks_udp_user"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="text"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/socks_udp_pass"/>
		<EditText
			android:id="@+id/socks_udp_pass"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:inputType="textPassword"/>
	</LinearLayout>
</ScrollView>
